<resources>
    <string name="app_name">SmartConvert</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_string">Login</string>
    <string name="skip_string">Skip</string>
    <string name="register_string">Register</string>
    <string name="title_string">Smart Convert</string>
    <string name="submit_string">Submit</string>
    <string name="username_string">Email</string>
    <string name="password_string">Password</string>
    <string name="Fname_string">First Name:</string>
    <string name="Lname_string">Last Name:</string>
    <string name="email_string">Email:</string>
    <string name="confirm_password_string">Confirm Password:</string>
    <string name="pass_string">Password:</string>
    <string name="confirm_email_title_string">Confirm Email</string>
    <string name="verification_code_string">Verification Code:</string>
    <string name="enter_string">Enter</string>
    <string name="welcome_string">Welcome to \nSmart Convert</string>
    <string name="american_curr_string">American</string>
    <string name="euro_curr_string">Euro</string>
    <string name="description_string">Smart Convert is an app that will convert currencies at the current rate. Location can be used to determine user\'s local currency.</string>
    <string name="convert_string">Convert</string>
    <string name="example_amount_1_string">5.00</string>
    <string name="example_amount_2_string">4.31</string>
    <string name="curr_location_string">Current Location</string>
    <string name="def_location_string">Default Location</string>
    <string name="Currency1">USD</string>
    <string name="Currency2">Euro</string>
    <string name="Value1">50</string>

    <string name="email_key">email_key</string>
    <string name="verificationCodeHint">Please enter the code</string>
    <string name="amount">amount</string>
    <string name="fname_hint">your first name</string>
    <string name="lname_hint">your last name</string>
    <string name="email_hint">your email</string>
    <string name="password_hint">password</string>
    <string name="end_tutorial_first_string">Change the spinner on the left to reflect what currency you want to convert from.</string>
    <string name="end_tutorial_second_string">Change the spinner on the right to reflect what you want to convert to.</string>
    <string name="end_tutorial_third_string">Press the convert button to see the results!</string>
    <string name="end_tutorial_fourth_string">Current location will be used if locations is allowed when it pops up.</string>
    <string name="end_tutorial_fifth_string">Enjoy!</string>
    <string name="defaultCountryText">Default Country =</string>
    <string name="profile_string">Your Profile</string>
    <string name="username_profile">Email:</string>
    <string name="edit_String">Edit</string>
    <string name="curLocation_text">Current Location =</string>
    <string name="default_location_key">default_location_key</string>
    <string name="current_location_key">current_location_key</string>
    <string name="prefs">prefs</string>
    <string name="currency_key">currency_key</string>
    <string name="profile_navText">Profile</string>
    <string name="settingsString">Settings</string>
    <string name="locationCode_key">locationCode</string>
    <string name="alert_message_string">Would you like to save this location as your default locaiton?</string>
    <string name="alert_title_string">Set Default</string>
    <string name="history_Text">History</string>
    <string name="logoutText">Log out</string>
    <string name="exitText">Exit</string>
    <string name="saveText">Save</string>
    <string name="alert_boo">alert_boo</string>
    <string name="def_set_boo">alert_boo</string>
    <string name="no_country_string">No Country</string>
    <string name="alert_done_boo">alert_done_boo</string>
    <string name="end_string">End</string>
    <string name="lat_key">lat</string>
    <string name="long_key">long</string>
    <string name="home_Text">Home</string>

</resources>
