<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="group6.tcss450.uw.edu.smartconvert.StartFrag">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:text="@string/login_string"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.486"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/skipButton"
            android:layout_width="105dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:text="@string/skip_string"
            app:layout_constraintTop_toBottomOf="@+id/loginButton"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/loginButton" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="105dp"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/register_string"
            app:layout_constraintLeft_toRightOf="@+id/skipButton"
            app:layout_constraintTop_toBottomOf="@+id/loginButton"
            android:layout_marginStart="20dp" />

        <TextView
            android:id="@+id/appNameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/loginButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>
</FrameLayout>
