<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="group6.tcss450.uw.edu.smartconvert.fragments.Tutorial2Fragment">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/arrowTutorialRightButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="0dp"
            android:background="?android:attr/selectableItemBackground"
            android:text=">"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.498" />

        <Button
            android:id="@+id/arrowTutorialLeftButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="-10dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="&lt;"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.498" />

        <Button
            android:id="@+id/skipTutorialButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/skip_string"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:enabled="false" />

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false" />
        </RadioGroup>

        <TextView
            android:id="@+id/currBTutorialView"
            android:layout_width="145dp"
            android:layout_height="19dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:text="@string/euro_curr_string"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="70dp" />

        <Button
            android:id="@+id/convertButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/convert_string"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.393" />

        <EditText
            android:id="@+id/currBFormTutorial"
            android:layout_width="145dp"
            android:layout_height="39dp"
            android:layout_marginRight="16dp"
            android:drawableBottom="@android:color/black"
            android:editable="false"
            android:ems="10"
            android:enabled="false"
            android:gravity="center"
            android:inputType="textPersonName"
            android:text="@string/example_amount_2_string"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/currBTutorialView" />

        <EditText
            android:id="@+id/currAFormTutorial"
            android:layout_width="145dp"
            android:layout_height="39dp"
            android:layout_marginLeft="16dp"
            android:drawableBottom="@android:color/black"
            android:editable="false"
            android:ems="10"
            android:enabled="false"
            android:foregroundGravity="center"
            android:gravity="center"
            android:inputType="textPersonName"
            android:text="@string/example_amount_1_string"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/currATutorialView" />

        <TextView
            android:id="@+id/currATutorialView"
            android:layout_width="145dp"
            android:layout_height="19dp"
            android:layout_marginLeft="16dp"
            android:gravity="center"
            android:text="@string/american_curr_string"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="70dp" />

        <TextView
            android:id="@+id/convertArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="->"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/currBFormTutorial" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>
